// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders fullwidth 1`] = `
.emotion-0 {
  width: 100%;
  -webkit-transition: color 200ms ease-in-out,background-color 200ms ease-in-out;
  transition: color 200ms ease-in-out,background-color 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  padding: 5px 16px;
  border-radius: 8px;
  color: #ffffffff;
  background-color: #134ae0ff;
}

.emotion-0:disabled {
  cursor: not-allowed;
}

.emotion-0:hover {
  color: #ffffffff;
}

.emotion-0:active {
  -webkit-transition: none;
  transition: none;
  color: #ffffffff;
}

.emotion-0:disabled {
  color: #ffffffff;
}

.emotion-0:hover {
  background-color: #175cebff;
}

.emotion-0:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7ff;
}

.emotion-0:disabled {
  background-color: #99beffff;
}

.emotion-1 {
  font-size: 14px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 22px;
  letter-spacing: normal;
}

<button
  class="emotion-0"
  data-testid="test-with-fullwidth"
>
  <span
    class="emotion-1"
  >
    Hello
  </span>
</button>
`;

exports[`Button renders round 1`] = `
.emotion-0 {
  -webkit-transition: color 200ms ease-in-out,background-color 200ms ease-in-out;
  transition: color 200ms ease-in-out,background-color 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  padding: 5px 16px;
  border-radius: 999px;
  color: #ffffffff;
  background-color: #134ae0ff;
}

.emotion-0:disabled {
  cursor: not-allowed;
}

.emotion-0:hover {
  color: #ffffffff;
}

.emotion-0:active {
  -webkit-transition: none;
  transition: none;
  color: #ffffffff;
}

.emotion-0:disabled {
  color: #ffffffff;
}

.emotion-0:hover {
  background-color: #175cebff;
}

.emotion-0:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7ff;
}

.emotion-0:disabled {
  background-color: #99beffff;
}

.emotion-1 {
  font-size: 14px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 22px;
  letter-spacing: normal;
}

<button
  class="emotion-0"
  data-testid="test-with-round"
>
  <span
    class="emotion-1"
  >
    Hello
  </span>
</button>
`;

exports[`Button renders with different variant 1`] = `
.emotion-0 {
  font-size: 14px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 22px;
  letter-spacing: normal;
}

<span
  class="emotion-0"
>
  Hello Fill
</span>
`;

exports[`Button renders with different variant 2`] = `
.emotion-0 {
  font-size: 14px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 22px;
  letter-spacing: normal;
}

<span
  class="emotion-0"
>
  Hello Dashed
</span>
`;

exports[`Button renders with different variant 3`] = `
.emotion-0 {
  font-size: 14px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 22px;
  letter-spacing: normal;
}

<span
  class="emotion-0"
>
  Hello Gray Dashed
</span>
`;

exports[`Button renders with different variant 4`] = `
.emotion-0 {
  font-size: 14px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 22px;
  letter-spacing: normal;
}

<span
  class="emotion-0"
>
  Hello Outline
</span>
`;

exports[`Button renders with different variant 5`] = `
.emotion-0 {
  font-size: 14px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 22px;
  letter-spacing: normal;
}

<span
  class="emotion-0"
>
  Hello Gray Outline
</span>
`;

exports[`Button renders with different variant 6`] = `
.emotion-0 {
  font-size: 14px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 22px;
  letter-spacing: normal;
}

<span
  class="emotion-0"
>
  Hello Text
</span>
`;

exports[`Button renders with different variant 7`] = `
.emotion-0 {
  font-size: 14px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 22px;
  letter-spacing: normal;
}

<span
  class="emotion-0"
>
  Hello Light
</span>
`;
